# PMIG

./: CMakeLists.txt  basefilter.cpp  basefilter.h  c3dobject.cpp  c3dobject.h  convolutionfilters.h  customconvfiltertable.cpp  customconvfiltertable.h  debug_res.qrc  functionalfilters.cpp  functionalfilters.h  grayscale.cpp  grayscale.h  h  imageview.cpp  imageview.h  imageviewer.cpp  imageviewer.h  img_res.qrc  main.cpp  pmig.cpp  pmig.h  pmig.ui  task2.cpp  task2.h  vectorcomponent.cpp  vectorcomponent.h
